--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.8",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2",
-    "use-typing-effect": "^1.1.0"
+    "react-typed": "^1.2.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
